base/009-list/fuse-009-list-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: list
  name: list
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: list
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: list
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-list:development"
          name: list
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
