base/009-list/fuse-009-list-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: list
  name: list
spec:
  host: "list-development.apps.ocp.virt.prospecta.com.au"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: list
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
